k8s/apps/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: prod
  labels:
    app: api
spec:
  selector:
    app: api
  ports:
  - name: http
    port: 80
    targetPort: 8000
    protocol: TCP
  type: ClusterIP
